@ChoiceType.trigger repeat to onchange