@@ -5,8 +5,8 @@ import org.springframework.core.type.filter.AssignableTypeFilter;
 import org.springframework.core.type.filter.TypeFilter;
 import org.springframework.stereotype.Component;
 import xyz.erupt.annotation.fun.ChoiceFetchHandler;
-import xyz.erupt.annotation.fun.ChoiceTrigger;
 import xyz.erupt.annotation.fun.VLModel;
+import xyz.erupt.annotation.sub_field.sub_edit.OnChange;
 import xyz.erupt.core.annotation.EruptHandlerNaming;
 import xyz.erupt.core.service.EruptApplication;
 import xyz.erupt.core.util.EruptSpringUtil;
@@ -14,14 +14,17 @@ import xyz.erupt.job.handler.EruptJobHandler;
 import xyz.erupt.job.model.EruptJob;
 import xyz.erupt.linq.lambda.LambdaSee;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 
 /**
  * @author YuePeng
  * date 2021/2/27 22:46
  */
 @Component
-public class EruptJobFetch implements ChoiceFetchHandler, ChoiceTrigger {
+public class EruptJobFetch implements ChoiceFetchHandler, OnChange<EruptJob> {
 
     private List<VLModel> loadedJobHandler;
 
@@ -45,23 +48,30 @@ public class EruptJobFetch implements ChoiceFetchHandler, ChoiceTrigger {
         return loadedJobHandler;
     }
 
-    @Override
     @SneakyThrows
-    public Map<String, Object> trigger(Object value, String[] params) {
-        for (VLModel vl : loadedJobHandler) {
-            if (vl.getValue().equals(value)) {
-                Map<String, Object> map = new HashMap<>();
-                EruptJobHandler jobHandler = EruptSpringUtil.getBeanByPath(vl.getDesc(), EruptJobHandler.class);
-                map.put(LambdaSee.field(EruptJob::getName), vl.getLabel());
-                if (null != jobHandler.param()) {
-                    map.put(LambdaSee.field(EruptJob::getHandlerParam), jobHandler.param());
+    @Override
+    public Map<String, Object> populateForm(EruptJob eruptJob, String[] params) {
+        if (null != eruptJob.getHandler()) {
+            for (VLModel vl : loadedJobHandler) {
+                if (vl.getValue().equals(eruptJob.getHandler())) {
+                    Map<String, Object> map = new HashMap<>();
+                    EruptJobHandler jobHandler = EruptSpringUtil.getBeanByPath(vl.getDesc(), EruptJobHandler.class);
+                    map.put(LambdaSee.field(EruptJob::getName), vl.getLabel());
+                    if (null != jobHandler.param()) {
+                        map.put(LambdaSee.field(EruptJob::getHandlerParam), jobHandler.param());
+                    }
+                    if (null != jobHandler.cron()) {
+                        map.put(LambdaSee.field(EruptJob::getCron), jobHandler.cron());
+                    }
+                    return map;
                 }
-                if (null != jobHandler.cron()) {
-                    map.put(LambdaSee.field(EruptJob::getCron), jobHandler.cron());
-                }
-                return map;
             }
         }
-        return Collections.emptyMap();
+        return Map.of();
+    }
+
+    @Override
+    public Map<String, String> buildEditExpr(EruptJob eruptJob, String[] params) {
+        return Map.of();
     }
 }
